# nmmp-protect

./: 123456  123456.pub  README.md  convertRules.txt
nmm-protect/: build.gradle  settings.gradle
nmm-protect/apkprotect/: build.gradle
nmm-protect/apkprotect/src/main/java/com/nmmedit/apkprotect/: ApkProtect.java  BuildNativeLib.java
nmm-protect/apkprotect/src/main/resources/: config.json
nmm-protect/apkprotect/src/main/resources/vmsrc/: ConstantPool.c  ConstantPool.h
nmm-protect/apkprotect/src/main/resources/vmsrc/vm/: DexCatch.cpp  DexCatch.h
nmm-protect/apkprotect/src/main/resources/vmsrc/vm/include/: GlobalCache.h  JNIWrapper.h  vm.h
nmm-protect/apkprotect/src/test/java/com/nmmedit/dex2c/: Dex2cTest.java
nmm-protect/disorder/: build.gradle  settings.gradle
nmm-protect/disorder/gradle/wrapper/: gradle-wrapper.properties
nmm-protect/disorder/src/main/java/xhu/spike/fusion/: Action.java  AdjustCode.java  Config.java  Data.java  ExpressionDistraction.java  InitFields.java  InitMethods.java  IntDistraction.java  JavaLoader.java  JavaVisitor.java  LineAction.java  LogDistraction.java  Main.java  RandomEngine.java  ReturnDistraction.java  (+2 more)
nmm-protect/gradle/wrapper/: gradle-wrapper.properties
nmm-protect/mksrc/: CMakeLists.txt
nmm-protect/mksrc/vm/: CMakeLists.txt
nmm-protect/src/main/java/com/nmmedit/protect/: AabMain.java
nmmvm/nmmvm/src/main/: AndroidManifest.xml
nmmvm/nmmvm/src/main/cpp/: ConstantPool.c  ConstantPool.h  temp_functions.c  temp_jni_init.c  temp_resolver.c  test.cpp
nmmvm/nmmvm/src/main/cpp/vm/: Exception.cpp  GlobalCache.cpp  InterpC-portable.cpp
nmmvm/nmmvm/src/main/cpp/vm/include/: Common.h  GlobalCache.h  vm.h
(+35 files in other folders)
